Add descriptions and keywords to training courses for SEO optimization
- Updated _index.md with a description and keywords for the training section.
- Enhanced architektura-101.md with a detailed description and relevant keywords.
- Improved azure-aks-masterclass.md by adding a comprehensive description and keywords.
- Added description and keywords to azure-container-apps-masterclass.md for better visibility.
- Updated azure-networking-masterclass.md with a new description and keywords.
- Enhanced github-actions-w-praktyce.md with a detailed description and relevant keywords.
- Improved grafana-alerting.md by adding a comprehensive description and keywords.
- Added description and keywords to grafana-masterclass.md for better visibility.
- Updated kubernetes-the-hard-way.md with a new description and keywords.
- Enhanced model-context-protocol-mcp-masterclass.md with a detailed description and relevant keywords.
- Improved modelowanie-danych.md by adding a comprehensive description and keywords.
- Added description and keywords to observability-stos-grafana.md for better visibility.
- Updated observability.md with a new description and keywords.
- Enhanced profilowanie-aplikacji-ebpf.md with a detailed description and relevant keywords.
- Improved wykrywanie-anomalii-prometheus-grafana.md by adding a comprehensive description and keywords.
- Added SEO and Schema.org metadata to various training YAML files, including educational level, rating, and teaching topics.

--- a/data/trainings/architektura-101.yaml
+++ b/data/trainings/architektura-101.yaml
@@ -13,6 +13,23 @@ tags:
   - "#Kubernetes"
   - "#Cloud"
 
+# SEO i Schema.org
+image: ""
+educational_level: "Intermediate"
+rating:
+  value: 4.9
+  count: 30
+teaches:
+  - "Fundamenty architektury IT i przegląd stylów architektury systemów"
+  - "Wzorce budowy systemów - modularność, komponenty i ich praktyczne zastosowanie"
+  - "Charakterystyki architektury - zarządzanie, identyfikacja, zakresy odpowiedzialności"
+  - "Bezpieczeństwo jako integralny element architektury systemów"
+  - "Architektura sieciowa - Load Balancing, L7, DNS, Firewalling, segmentacja"
+  - "Podejmowanie strategicznych decyzji - build vs. build z OSS vs. buy"
+  - "Kubernetes i ekosystem CNCF - minimal valuable stack"
+  - "Architecture Kata - praktyczne ćwiczenia projektowania architektury"
+audience: "Inżynierowie IT i programiści pragnący rozwijać umiejętności architektoniczne i przejść na kolejny poziom w projektowaniu systemów"
+
 # Treść
 description:
   - "Rozpocznij swoją przygodę z architekturą IT od podstaw, ale na sterydach. Bez zbędnych teorii, tylko praktyczna wiedza z pierwszej ręki."
