Add Tailwind CSS configuration and update styles
- Created package.json to manage Tailwind CSS dependencies and scripts.
- Removed unused line-height classes from root.css.
- Cleaned up style.css by removing universal selector styles.
- Deleted outdated talwind.js configuration file.
- Added new tailwind.config.js with updated theme settings and safelist.

--- a/hugo.toml
+++ b/hugo.toml
@@ -6,6 +6,10 @@ enableGitInfo = true
 # Wyłącz generowanie stron taxonomy i term (nie mają layoutów)
 disableKinds = ["taxonomy", "term"]
 
+# Hugo Pipes - TailwindCSS integration
+[build]
+  writeStats = true
+
 [frontmatter]
   date = ["date", "publishDate", "lastmod"]
   lastmod = [":git", "lastmod", "date", "publishDate"]
